<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 Rajiv M
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_widget"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/menu_fab"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_fab" />
        <item
            android:id="@+id/menu_snack_bar"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_snack_bar" />
        <item
            android:id="@+id/menu_recycler"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_recycler" />
        <item
            android:id="@+id/menu_collapsing_tb"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_collapsing_tb" />
        <item
            android:id="@+id/menu_tab_layout"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_tab_layout" />
        <item
            android:id="@+id/menu_palette"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_palette" />
        <item android:title="@string/sub_menu_title">
            <menu>
                <item
                    android:id="@+id/sub_menu_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/sub_menu_settings" />
            </menu>
        </item>
    </group>
</menu>
